--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.35.0
-pymongo==4.7.1
-spacy==3.7.4
-scikit-learn==1.4.2
-numpy==1.26.4
+streamlit
+pymongo
+pandas
+nltk
+spacy
+python-dotenv
+
